[package]
name = "file-has"
version = "0.1.0"
authors = ["Property404 <martinez.dagan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "2.33.3"

[dev-dependencies]
assert_cmd = "1.0.3"
